scrollbar fix

--- a/docexpress/css/main.css
+++ b/docexpress/css/main.css
@@ -292,16 +292,19 @@ ul{
         overflow-y: auto;
         margin: 0 auto; }
         form::-webkit-scrollbar {
+          height: 100%;
           width: 5px; }
         form::-webkit-scrollbar-button{
           background-size: 100%;
-          height: 6.5px;
+          height: 6px;
           width: 10px;
           background-size: cover; }
-        form::-webkit-scrollbar-button:vertical:decrement{
+        form::-webkit-scrollbar-button:vertical:start:decrement{
+          display: block;
           background:url('../img/scrollArrowUp.png') center center;
         }
-        form::-webkit-scrollbar-button:vertical:increment{
+        form::-webkit-scrollbar-button:vertical:end:increment{
+          display: block;
           background:url('../img/scrollArrowDown.png') center center;
         }
         form::-webkit-scrollbar-track {
@@ -312,6 +315,9 @@ ul{
           border: 1px solid #0E76BC;
           border-radius: 5px;
           background: #0E76BC; }
+          form::-webkit-scrollbar-thumb:vertical{
+            height: 100px;
+          }
         form label{
           display: block;
           margin-bottom: 8px;
